# recon/src/libp2p/handler.rs
@@ -14,7 +14,7 @@ use libp2p::{
     },
 };
 use libp2p_identity::PeerId;
-use tracing::debug;
+use tracing::{debug, trace, warn};
 
 use crate::{
     libp2p::{protocol, stream_set::StreamSet, upgrade::MultiReadyUpgrade, Recon},
@@ -94,7 +94,7 @@ pub enum State {
     Idle,
     WaitingInbound,
     RequestOutbound { stream_set: StreamSet },
-    WaitingOutbound { stream_set: StreamSet },
+    WaitingOutbound,
     Outbound(SyncFuture),
     Inbound(SyncFuture),
 }
@@ -108,10 +108,7 @@ impl std::fmt::Debug for State {
                 .debug_struct("RequestOutbound")
                 .field("stream_set", stream_set)
                 .finish(),
-            Self::WaitingOutbound { stream_set } => f
-                .debug_struct("WaitingOutbound")
-                .field("stream_set", stream_set)
-                .finish(),
+            Self::WaitingOutbound => f.debug_struct("WaitingOutbound").finish(),
             Self::Outbound(_) => f.debug_tuple("Outbound").field(&"_").finish(),
             Self::Inbound(_) => f.debug_tuple("Inbound").field(&"_").finish(),
         }
@@ -186,7 +183,7 @@ where
             State::Idle | State::WaitingOutbound { .. } | State::WaitingInbound => {}
             State::RequestOutbound { stream_set } => {
                 let stream_set = *stream_set;
-                self.transition_state(State::WaitingOutbound { stream_set });
+                self.transition_state(State::WaitingOutbound);
 
                 // Start outbound connection
                 let protocol = SubstreamProtocol::new(MultiReadyUpgrade::new(vec![stream_set]), ());
@@ -216,17 +213,14 @@ where
 
     fn on_behaviour_event(&mut self, event: Self::FromBehaviour) {
         match event {
-            FromBehaviour::StartSync { stream_set } => {
-                debug!("starting sync: {:?}", stream_set);
-                match self.state {
-                    State::Idle => self.transition_state(State::RequestOutbound { stream_set }),
-                    State::RequestOutbound { .. }
-                    | State::WaitingOutbound { .. }
-                    | State::WaitingInbound
-                    | State::Outbound(_)
-                    | State::Inbound(_) => {}
-                }
-            }
+            FromBehaviour::StartSync { stream_set } => match self.state {
+                State::Idle => self.transition_state(State::RequestOutbound { stream_set }),
+                State::RequestOutbound { .. }
+                | State::WaitingOutbound { .. }
+                | State::WaitingInbound
+                | State::Outbound(_)
+                | State::Inbound(_) => {}
+            },
         }
     }
 
@@ -251,7 +245,7 @@ where
                         self.behavior_events_queue
                             .push_front(FromHandler::Started { stream_set });
                         let stream = match stream_set {
-                            StreamSet::Interest => protocol::accept_synchronize(
+                            StreamSet::Interest => protocol::respond_synchronize(
                                 self.remote_peer_id,
                                 self.connection_id,
                                 stream_set,
@@ -259,7 +253,7 @@ where
                                 stream,
                             )
                             .boxed(),
-                            StreamSet::Model => protocol::accept_synchronize(
+                            StreamSet::Model => protocol::respond_synchronize(
                                 self.remote_peer_id,
                                 self.connection_id,
                                 stream_set,
@@ -279,19 +273,19 @@ where
             }
             libp2p::swarm::handler::ConnectionEvent::FullyNegotiatedOutbound(
                 FullyNegotiatedOutbound {
-                    protocol: stream, ..
+                    protocol: (stream_set, stream),
+                    ..
                 },
             ) => {
                 match &self.state {
-                    State::WaitingOutbound { stream_set } => {
-                        self.behavior_events_queue.push_front(FromHandler::Started {
-                            stream_set: *stream_set,
-                        });
+                    State::WaitingOutbound => {
+                        self.behavior_events_queue
+                            .push_front(FromHandler::Started { stream_set });
                         let stream = match stream_set {
                             StreamSet::Interest => protocol::initiate_synchronize(
                                 self.remote_peer_id,
                                 self.connection_id,
-                                *stream_set,
+                                stream_set,
                                 self.interest.clone(),
                                 stream,
                             )
@@ -299,7 +293,7 @@ where
                             StreamSet::Model => protocol::initiate_synchronize(
                                 self.remote_peer_id,
                                 self.connection_id,
-                                *stream_set,
+                                stream_set,
                                 self.model.clone(),
                                 stream,
                             )
@@ -317,11 +311,12 @@ where
             }
             libp2p::swarm::handler::ConnectionEvent::AddressChange(_) => {}
             // We failed to upgrade the inbound connection.
-            libp2p::swarm::handler::ConnectionEvent::ListenUpgradeError(_) => {
+            libp2p::swarm::handler::ConnectionEvent::ListenUpgradeError(err) => {
                 match self.state {
                     State::WaitingInbound => {
                         // We have stopped synchronization and cannot attempt again as we are unable to
                         // negotiate a protocol.
+                        warn!(?err, "handler listen upgrade error");
                         self.behavior_events_queue.push_front(FromHandler::Stopped);
                         self.transition_state(State::Idle)
                     }
@@ -333,11 +328,12 @@ where
                 }
             }
             // We failed to upgrade the outbound connection.
-            libp2p::swarm::handler::ConnectionEvent::DialUpgradeError(_) => {
+            libp2p::swarm::handler::ConnectionEvent::DialUpgradeError(err) => {
                 match self.state {
                     State::WaitingOutbound { .. } => {
                         // We have stopped synchronization and cannot attempt again as we are unable to
                         // negotiate a protocol.
+                        warn!(?err, "handler dial upgrade error");
                         self.behavior_events_queue.push_front(FromHandler::Stopped);
                         self.transition_state(State::Idle)
                     }
@@ -348,14 +344,8 @@ where
                     | State::Inbound(_) => {}
                 }
             }
-            libp2p::swarm::handler::ConnectionEvent::LocalProtocolsChange(changes) => {
-                debug!(?changes, "local protocols change")
-            }
-            libp2p::swarm::handler::ConnectionEvent::RemoteProtocolsChange(changes) => {
-                debug!(?changes, "remote protocols change")
-            }
-            _ => {
-                debug!("ignoring unknown connection event")
+            event => {
+                trace!("ignoring connection event {event:?}")
             }
         }
     }
